First Working Prototype. Select Hardware Connect 2 servers with API Clients Move Hardware with all setting from 1 server to another

--- a/MoveHardware/MoveHardware.csproj
+++ b/MoveHardware/MoveHardware.csproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigApiClient.cs" />
+    <Compile Include="Icons.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -155,9 +156,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="3rd_party_software_terms_and_conditions.txt" />
