--- a/MoveHardware/MoveHardware.csproj
+++ b/MoveHardware/MoveHardware.csproj
@@ -125,7 +125,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigApiClient.cs" />
-    <Compile Include="Icons.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +133,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Icons.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,6 +159,49 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="3rd_party_software_terms_and_conditions.txt" />
+    <EmbeddedResource Include="Resources\AccessControlDoor.png" />
+    <EmbeddedResource Include="Resources\AccessControlSystem.png" />
+    <EmbeddedResource Include="Resources\advanced.ico" />
+    <EmbeddedResource Include="Resources\alarm-14x14.png" />
+    <EmbeddedResource Include="Resources\alarm2.ico" />
+    <EmbeddedResource Include="Resources\alert.ico" />
+    <EmbeddedResource Include="Resources\AnalyticsSource.ico" />
+    <EmbeddedResource Include="Resources\BasicUser.ico" />
+    <EmbeddedResource Include="Resources\camera.ico" />
+    <EmbeddedResource Include="Resources\central.ico" />
+    <EmbeddedResource Include="Resources\Clear Video Wall View - Single Item.png" />
+    <EmbeddedResource Include="Resources\Clear Video Wall View.png" />
+    <EmbeddedResource Include="Resources\Create License Request 16 n i8.ico" />
+    <EmbeddedResource Include="Resources\event.ico" />
+    <EmbeddedResource Include="Resources\Folder Closed Flat 16 n p.png" />
+    <EmbeddedResource Include="Resources\folder_closed.ico" />
+    <EmbeddedResource Include="Resources\folder_open.ico" />
+    <EmbeddedResource Include="Resources\GisMapLocation.png" />
+    <EmbeddedResource Include="Resources\Hardware.ico" />
+    <EmbeddedResource Include="Resources\input.ico" />
+    <EmbeddedResource Include="Resources\LicensePlateList_16x16.png" />
+    <EmbeddedResource Include="Resources\matrix.ico" />
+    <EmbeddedResource Include="Resources\Metadata_device.ico" />
+    <EmbeddedResource Include="Resources\microphone.ico" />
+    <EmbeddedResource Include="Resources\output.ico" />
+    <EmbeddedResource Include="Resources\PlugIn.bmp" />
+    <EmbeddedResource Include="Resources\Presets.ico" />
+    <EmbeddedResource Include="Resources\Recorder.ico" />
+    <EmbeddedResource Include="Resources\Role.ico" />
+    <EmbeddedResource Include="Resources\Rule.ico" />
+    <EmbeddedResource Include="Resources\SDK_general.ico" />
+    <EmbeddedResource Include="Resources\SDK_tool.ico" />
+    <EmbeddedResource Include="Resources\SDK_VS.ico" />
+    <EmbeddedResource Include="Resources\Server.png" />
+    <EmbeddedResource Include="Resources\Single View 16 h p.png" />
+    <EmbeddedResource Include="Resources\speaker.ico" />
+    <EmbeddedResource Include="Resources\TimeProfile.ico" />
+    <EmbeddedResource Include="Resources\TransactSource.ico" />
+    <EmbeddedResource Include="Resources\User.ico" />
+    <EmbeddedResource Include="Resources\Video Wall 16 n i8.ico" />
+    <EmbeddedResource Include="Resources\View group closed 16 n p.png" />
+    <EmbeddedResource Include="Resources\ViewItem.ico" />
+    <EmbeddedResource Include="Resources\Window 16 h p.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MilestoneSystems.VideoOS.Platform.SDK.20.3.0\build\MilestoneSystems.VideoOS.Platform.SDK.targets" Condition="Exists('..\packages\MilestoneSystems.VideoOS.Platform.SDK.20.3.0\build\MilestoneSystems.VideoOS.Platform.SDK.targets')" />
