--- a/MoveHardware/packages.config
+++ b/MoveHardware/packages.config
@@ -1,39 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="5.4.0-alpha0042" targetFramework="net472" developmentDependency="true" />
-  <package id="Fody" version="6.5.1" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.JsonPatch" version="6.0.0-preview.6.21355.2" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0-preview.6.21352.12" targetFramework="net472" />
+  <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Fody" version="6.7.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.JsonPatch" version="7.0.5" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.12.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.12.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.12.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.12.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.12.0" targetFramework="net472" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin" version="4.2.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.29.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.29.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.29.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.29.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.29.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.29.0" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.2" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="MilestoneSystems.VideoOS.ConfigurationAPI" version="21.1.0" targetFramework="net472" />
-  <package id="MilestoneSystems.VideoOS.Platform" version="21.1.0" targetFramework="net472" />
-  <package id="MilestoneSystems.VideoOS.Platform.SDK" version="21.1.0" targetFramework="net48" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="MilestoneSystems.VideoOS.ConfigurationAPI" version="23.1.1" targetFramework="net48" />
+  <package id="MilestoneSystems.VideoOS.Platform" version="23.1.1" targetFramework="net48" />
+  <package id="MilestoneSystems.VideoOS.Platform.SDK" version="23.1.2" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
-  <package id="System.Console" version="4.3.0" targetFramework="net472" />
+  <package id="System.Console" version="4.3.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.12.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.29.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
@@ -41,9 +42,9 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net472" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net48" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
@@ -51,27 +52,27 @@
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.6.21352.12" targetFramework="net472" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net48" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="6.0.0-preview.6.21352.12" targetFramework="net472" />
-  <package id="System.Text.Json" version="6.0.0-preview.6.21352.12" targetFramework="net472" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="7.0.2" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net48" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net48" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
 </packages>
